--- a/Arena/templates/management/stream.html
+++ b/Arena/templates/management/stream.html
@@ -10,8 +10,7 @@
 <!--            {% endfor %}-->
         </select>
         <button id="streamButton" type="button" class="btn btn-primary mr-2">Stream</button>
-        <button id="stopStream" type="button" class="btn btn-outline-danger">Stop Stream</button>
+        <button id="stopStream" type="button" class="btn btn-outline-danger mr-2">Stop Stream</button>
         <button id="captureImage" type="button" class="btn btn-outline-info">Capture</button>
-        <button id="calibrate" type="button" class="btn btn-outline-info">Calibrate</button>
     </div>
 </div>
