--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -10,6 +10,7 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css"
           rel="stylesheet">
+    <link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
     <link href="{{ url_for('static', filename='bootstrap-4.5.0/css/bootstrap.css')}}" rel="stylesheet">
     <script src="{{ url_for('static', filename='Bootstrap-4-Multi-Select-BsMultiSelect/dist/js/BsMultiSelect.js') }}"
@@ -22,11 +23,22 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.0/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/js/tempusdominus-bootstrap-4.min.js" integrity="sha512-k6/Bkb8Fxf/c1Tkyl39yJwcOZ1P4cRrJu77p83zJjN2Z55prbFHxPs9vN7q3l3+tSMGPDdoH51AEU8Vgo1cgAA==" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.min.css" integrity="sha512-3JRrEUwaCkFUBLK1N8HehwQgu8e23jTH4np5NHOmQOobuC4ROQxFwFgBLTnhcnQRMs84muMh0PnnwXlPq5MGjg==" crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/10.0.2/jsoneditor.min.js" integrity="sha512-QoEa+2J/Sie4bjZNs546qH2o7pK246K7bPYqMOkIU2J7Hdj6axTsPqYbbr0SgQ7iSAomOSa922z+z6yNbECGJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/10.0.2/jsoneditor.min.css" integrity="sha512-8G+Vb2+10BSrSo+wupdzJIylDLpGtEYniQhp0rsbTigPG7Onn2S08Ai/KEGlxN2Ncx9fGqVHtRehMuOjPb9f8g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
 <div class="row">
     <div class="col-xl-7">
+        {% include "management/reboots.html" %}
+        {% include "management/calibrations.html" %}
+        {% include "management/predictions.html" %}
+        <button class="btn btn-lg"  data-toggle="modal" data-target="#rebootsModal" style="padding: 0">
+            <i class="fa fa-power-off fa-lg"></i>
+        </button>
+        <button class="btn btn-lg"  data-toggle="modal" data-target="#arenaConfig" style="padding: 0">
+            <i class="fa fa-cog fa-lg"></i>
+        </button>
         <h1 class="p-2" style="font-size: 4em; text-align: center; margin-bottom: 0; padding-bottom: 0 !important;">PreyTouch</h1>
         <h4 style="text-align: center; margin-bottom: 1em">{{arena_name}}</h4>
         <div class="row top-border bottom-border" id="all-panels" style="padding-bottom: 0">
@@ -578,13 +590,13 @@
             })
         })
 
-        $("#calibrate").click(function (e) {
-            $.post(`/calibrate`, {camera: $("#selectStreamCamera").val()}).done( function (data) {
-                let bytestring = data['status']
-                let image = bytestring.split('\'')[1]
-                $("#stream_img").attr('src' , 'data:image/jpeg;base64,'+image)
-            })
-        })
+        // $("#calibrate").click(function (e) {
+        //     $.post(`/calibrate`, {camera: $("#selectStreamCamera").val()}).done( function (data) {
+        //         let bytestring = data['status']
+        //         let image = bytestring.split('\'')[1]
+        //         $("#stream_img").attr('src' , 'data:image/jpeg;base64,'+image)
+        //     })
+        // })
 
         $("#clearOutputButton").click(function (e) {
             $("#record-output").empty()
