--- a/Arena/templates/management/events.html
+++ b/Arena/templates/management/events.html
@@ -57,6 +57,30 @@
     </div>
 </div>
 
+
+<!-- Animal Summary Modal -->
+<div class="modal fade" id="animalSummaryModal" tabindex="-1" role="dialog"
+     aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Animal Summary</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <pre id="animalSummaryText"></pre>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 <!-- Media Modal -->
 <div class="modal fade" id="startMediaModal" tabindex="-1" role="dialog"
      aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -142,6 +166,15 @@
         $.get('/reward', function (data) {
             console.log('>> Reward sent manually')
         })
+    })
+
+    $("#animalSummary").click(function (e) {
+        $.get('/animal_today_summary', function (data) {
+            $("#animalSummaryText").text(data)
+        }).fail((data) => {
+          $("#animalSummaryText").text(data.responseText)
+      })
+        $('#animalSummaryModal').modal('toggle');
     })
 
     $("#init_bugs").click(function (e) {
