new periphery support

--- a/Arena/templates/management/middle_panel.html
+++ b/Arena/templates/management/middle_panel.html
@@ -57,6 +57,7 @@
                 <div class="col-md-6" style="padding-right: 0">
                     <div id="currentExperimentName"></div>
                     <div id="currentBlockID"></div>
+                    <div id="peripheryInterfaces"></div>
                     <div id="openAppHostDiv"></div>
                     <div id="gpuMetric"></div>
                     <div id="cpuMetric"></div>
