--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -179,6 +179,12 @@
                     $("#currentBlockID").text(expName ? `Block ID: ${blockId}` : '')
                     $("#openAppHostDiv").text(openAppHost ? `pogona hunter run on: ${openAppHost}` : 'No APP is running')
 
+                    let perpHC = data['periphery_hc']
+                    if (!perpHC) {
+                        $("#peripheryInterfaces").text(`No periphery interfaces!`).css({'color': 'red'})
+                    } else {
+                        $("#peripheryInterfaces").text(`Periphery:${perpHC}`).css({'color': 'black'})
+                    }
                     // $("#nStrikes").text(`Today Strikes Count: ${(data['n_strikes']).toFixed(0)}`)
                     // $("#nRewards").text(`Today Rewards Count: ${(data['n_rewards'])}`)
 
