--- a/Arena/templates/management/experiment_modal.html
+++ b/Arena/templates/management/experiment_modal.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="form-group row pr-3" id="isTestDiv">
-        <label for="isTest" class="col col-form-label">Test Experiment</label>
+        <label for="isTest" class="col col-form-label">Debug Mode</label>
         <div class="col-sm-5">
             <input id="isTest" type="checkbox" class="form-control-sm">
         </div>
