--- a/Arena/templates/management/experiment_modal.html
+++ b/Arena/templates/management/experiment_modal.html
@@ -116,9 +116,32 @@
                     </div>
 
                     <div class="form-group row pr-3 bugs-options{{i}}" id="holesHeightDiv{{i}}" style="display: none;">
-                        <label for="holesHeight{{i}}" class="col col-form-label">Holes Height:</label>
+                        <div class="col col-form-label">
+                            <label for="holesHeight{{i}}" style="margin-bottom: 0">Holes Height Scale:</label>
+                            <div style="font-size: small">0-screen bottom, 1-screen top</div>
+                        </div>
                         <div class="col-sm-5">
-                            <input type="number" class="form-control" id="holesHeight{{i}}" min="0" max="1000">
+                            <input type="number" class="form-control" id="holesHeight{{i}}" min="0" max="1" value="0.1">
+                        </div>
+                    </div>
+
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="circleHeightDiv{{i}}" style="display: none;">
+                        <div class="col col-form-label">
+                            <label for="circleHeight{{i}}" style="margin-bottom: 0">Circle Height Scale:</label>
+                            <div style="font-size: small">0-screen bottom, 1-screen top</div>
+                        </div>
+                        <div class="col-sm-5">
+                            <input type="number" class="form-control" id="circleHeight{{i}}" min="0" max="1" value="0.5">
+                        </div>
+                    </div>
+
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="circleRadiusDiv{{i}}" style="display: none;">
+                        <div class="col col-form-label">
+                            <label for="circleRadius{{i}}" style="margin-bottom: 0">Circle Radius Scale:</label>
+                            <div style="font-size: small">0.5-half length between holes</div>
+                        </div>
+                        <div class="col-sm-5">
+                            <input type="number" class="form-control" id="circleRadius{{i}}" min="0" max="0.5" value="0.2">
                         </div>
                     </div>
 
