--- a/Arena/templates/management/animal_id.html
+++ b/Arena/templates/management/animal_id.html
@@ -16,8 +16,8 @@
         <button id="updateAnimalId" type="button" class="btn btn-sm btn-outline-info">Update</button>
     </div>
 
-    <div class="col" style="padding: 1%; margin-left: 0.5em; ;flex: 0 0 34%">
-        <label for="openAnimalSettings" class="col-form-label" style="height: 45%"></label>
+    <div class="col" style="margin-left: 0.5em;">
+        <label for="openAnimalSettings" class="col-form-label" style="height: 75%"></label>
         <button id="openAnimalSettings" type="button" class="btn btn-sm btn-outline-info">Animal Settings</button>
     </div>
 </div>
