--- a/Arena/templates/management/events.html
+++ b/Arena/templates/management/events.html
@@ -1,5 +1,6 @@
 <div class="col" id="events_column">
     {% include "management/configurations.html" %}
+    {% include "management/animal_summary.html" %}
     <h4 style="text-align: center;">Events</h4>
 
     {% for name in toggels %}
@@ -56,29 +57,6 @@
     </div>
     {% endif %}
 </div>
-
-
-<!-- Animal Summary Modal -->
-<div class="modal fade" id="animalSummaryModal" tabindex="-1" role="dialog"
-     aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Animal Summary</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <pre id="animalSummaryText"></pre>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
 
 
 <!-- Media Modal -->
@@ -221,12 +199,9 @@
     })
 
     $("#animalSummary").click(function (e) {
-        $.get('/animal_today_summary', function (data) {
-            $("#animalSummaryText").text(data)
-        }).fail((data) => {
-          $("#animalSummaryText").text(data.responseText)
-      })
-        $('#animalSummaryModal').modal('toggle');
+        $("#animalIdsForSummarySelect").val($("#animalIdsForSummarySelect option:first").val()).trigger('change')
+        $("#updateAnimalSummary").click()
+        $('#animalSummaryModal').modal('toggle')
     })
 
     $("#init_bugs").click(function (e) {
